# plump-ipc

./: LICENSE  README.md  pyproject.toml
plump_ipc/: __init__.py  exceptions.py  logs.py  queue.py  rpc.py  serialization.py
